@@ -11044,7 +11044,7 @@
 		  [(set (match_operand:SI 1 "memory_operand" "=m")
        			(match_operand:SI 2 "gpc_reg_operand" "r"))])]
  "TARGET_MULTIPLE"
- "stmw %2,%1")
+ "{stm|stmw} %2,%1")
  
 (define_insn "*save_fpregs_si"
  [(match_parallel 0 "any_operand"
@@ -11114,7 +11114,7 @@
 		  [(set (match_operand:SI 1 "gpc_reg_operand" "=r")
        			(match_operand:SI 2 "memory_operand" "m"))])]
  "TARGET_MULTIPLE"
- "lmw %1,%2")
+ "{lm|lmw} %1,%2")
  
 (define_insn "*return_internal_si"
   [(use (match_operand:SI 0 "register_operand" "l"))
